--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.4.0",
+    "aurelia-validation": "^2.0.0",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "moment": "^2.29.4"
